--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>animation</title>
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"
+          ><img src="billeder/LOGO_v1.png" alt="billede af logo"
+        /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -60,18 +62,18 @@
 
         <div class="tema_grid">
           <div class="temabillede">
-            <img src="billeder/spil_portfolio.png" />
+            <img src="billeder/spil_portfolio.png" alt="billede af spil" />
           </div>
           <div class="opgave_info">
             <h2>04.08.00</h2>
             <h3>SPILLET</h3>
-            <button>
+            <div class="button">
               <a
                 href="http://www.ceciliejasmin.dk/kea/04_animation/mus_i_elefanthus/index.html"
                 target="_blank"
                 >SPIL SPILLET</a
               >
-            </button>
+            </div>
           </div>
         </div>
 
@@ -137,26 +139,29 @@
       <section>
         <div class="tema_grid">
           <div class="temabillede right">
-            <img src="billeder/spil_web_portfolio.png" />
+            <img
+              src="billeder/spil_web_portfolio.png"
+              alt="billede af mit spil website"
+            />
           </div>
           <div class="opgave_info">
             <h2>04.09.00</h2>
             <h3>SPIL WEBSITE</h3>
 
-            <button>
+            <div class="button">
               <a
                 href="http://ceciliejasmin.dk/kea/04_animation/website/"
                 target="_blank"
                 >SPIL WEBSITE</a
               >
-            </button>
-            <button>
+            </div>
+            <div class="button">
               <a
                 href="http://ceciliejasmin.dk/kea/04_animation/website/doku.html"
                 target="_blank"
                 >DOKUMENTATION</a
               >
-            </button>
+            </div>
           </div>
         </div>
 
