--- a/content.html
+++ b/content.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>content</title>
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"><img src="billeder/LOGO_v1.png" /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -60,25 +60,28 @@
 
         <div class="tema_grid">
           <div class="temabillede">
-            <img src="billeder/pilot_portfolio.png" />
+            <img
+              src="billeder/pilot_portfolio.png"
+              alt="billede af mit pilot projekt"
+            />
           </div>
           <div class="opgave_info">
             <h2>05.01.02</h2>
             <h3>PILOT PROJEKT</h3>
-            <button>
+            <div class="button">
               <a
                 href="http://ceciliejasmin.dk/kea/05_content/01_pilot/pilot_website/index.html"
                 target="_blank"
                 >BESØG WEBSITE</a
               >
-            </button>
-            <button>
+            </div>
+            <div class="button">
               <a
                 href="http://ceciliejasmin.dk/kea/05_content/01_pilot/julianes_passion_interview.mp4"
                 target="_blank"
                 >SE VIDEO</a
               >
-            </button>
+            </div>
           </div>
         </div>
 
@@ -135,26 +138,29 @@
       <section>
         <div class="tema_grid">
           <div class="temabillede right">
-            <img src="billeder/redesign_portfolio.png" />
+            <img
+              src="billeder/redesign_portfolio.png"
+              alt="billede af mit redesign website"
+            />
           </div>
           <div class="opgave_info">
             <h2>05.02.00</h2>
             <h2>REDESIGN</h2>
 
-            <button>
+            <div class="button">
               <a
                 href="https://musing-shirley-56f439.netlify.app/"
                 target="_blank"
                 >BESØG WEBSITE</a
               >
-            </button>
-            <button>
+            </div>
+            <div class="button">
               <a
                 href="https://ceciliejasmin.dk/kea/05_content/02_redesign/redesign.pdf"
                 target="_blank"
                 >DOKUMENTATION</a
               >
-            </button>
+            </div>
           </div>
         </div>
 
