--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forside</title>
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"
+          ><img src="billeder/LOGO_v1.png" alt="billede af logo"
+        /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -32,7 +34,10 @@
 
     <main>
       <section class="splash">
-        <img src="billeder/splash_portfolio_3.webp" alt="test" />
+        <img
+          src="billeder/splash_portfolio_3.webp"
+          alt="billede af semester arbejde"
+        />
 
         <h1>PORTFOLIO</h1>
         <p>MMD 1. SEMESTER F2021</p>
@@ -51,7 +56,10 @@
           <div class="tema_6_indhold">
             <div class="section_wrapper">
               <div class="tema_6_billede">
-                <img src="billeder/portfolio_website.png" alt="test" />
+                <img
+                  src="billeder/portfolio_website.png"
+                  alt="billede af portfolio website"
+                />
               </div>
               <div class="tema_6_text">
                 <h3>06 - PORTFOLIO</h3>
@@ -62,11 +70,12 @@
                   vi har lært i HTML, CSS, JavaScript samt produktion af indhold
                   og designteori.
                 </p>
-
-                <div class="knap">
-                  <button>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                  </button>
+                <div class="portfolio_knap">
+                  <div class="knap">
+                    <div class="button">
+                      <a href="portfolio.html">PORTFOLIO</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -77,13 +86,19 @@
       <section>
         <div class="tema_billeder">
           <div class="billede_1">
-            <img src="billeder/animation_billede.webp" />
+            <img
+              src="billeder/animation_billede.webp"
+              alt="billede af paper prototype"
+            />
           </div>
           <div class="billede_2">
-            <img src="billeder/ux_billede.webp" />
+            <img src="billeder/ux_billede.webp" alt="billede af ux prototype" />
           </div>
           <div class="billede_3">
-            <img src="billeder/content_billede2.webp" />
+            <img
+              src="billeder/content_billede2.webp"
+              alt="billede af redesign"
+            />
           </div>
         </div>
       </section>
