--- a/om_mig.html
+++ b/om_mig.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om mig</title>
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"
+          ><img src="billeder/LOGO_v1.png" alt="billede af logo"
+        /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -40,7 +42,10 @@
       <section>
         <div class="section_wrapper2">
           <div class="profilbillede1">
-            <img src="billeder/profilbillede1.webp" />
+            <img
+              src="billeder/profilbillede1.webp"
+              alt="profil billede af mig"
+            />
           </div>
           <div class="text_left">
             <h2>HVORFOR MMD?</h2>
@@ -68,7 +73,10 @@
       <section>
         <div class="section_wrapper2">
           <div class="profilbillede2">
-            <img src="billeder/profilbillede2.webp" />
+            <img
+              src="billeder/profilbillede2.webp"
+              alt="billede af mig der kigger op"
+            />
           </div>
 
           <div class="text_right">
@@ -94,17 +102,24 @@
       <section>
         <div class="section_wrapper2">
           <div class="tegning">
-            <img src="billeder/tegning.webp" />
+            <img src="billeder/tegning.webp" alt="billede af en tegning" />
           </div>
-           <div class="text_left">
+          <div class="text_left">
             <h2>KOMPETENCER</h2>
             <p>
-              2 år som tekstbeskrivelsesforfatter hos Global Customer Service hvor jeg også fik erfaring med design af websites. 
+              2 år som tekstbeskrivelsesforfatter hos Global Customer Service
+              hvor jeg også fik erfaring med design af websites.
             </p>
             <p>
-            Gennem 1. semester på MDD på Kea har jeg opnået grundlæggende viden indenfor HTML, CSS, JavaScript, samt viden indenfor designteori og dramaturgi. </p><p>Derudover har jeg fået erfaring med Adobe programmerne Photoshop, XD, Illustrator, Audition samt Premiere pro. 
+              Gennem 1. semester på MDD på Kea har jeg opnået grundlæggende
+              viden indenfor HTML, CSS, JavaScript, samt viden indenfor
+              designteori og dramaturgi.
             </p>
-           
+            <p>
+              Derudover har jeg fået erfaring med Adobe programmerne Photoshop,
+              XD, Illustrator, Audition samt Premiere pro.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -114,13 +129,16 @@
           <div class="om_mig_billeder">
             <div class="tema_billeder">
               <div class="billede_1">
-                <img src="billeder/om_mig_billede.webp" />
+                <img
+                  src="billeder/om_mig_billede.webp"
+                  alt="billede af et træ"
+                />
               </div>
               <div class="billede_2">
-                <img src="billeder/indy.webp" />
+                <img src="billeder/indy.webp" alt="billede af en hund" />
               </div>
               <div class="billede_3">
-                <img src="billeder/kbh.webp" />
+                <img src="billeder/kbh.webp" alt="billede af kbh" />
               </div>
             </div>
           </div>
