--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"
+          ><img src="billeder/LOGO_v1.png" alt="billede af logo"
+        /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -46,7 +48,10 @@
         <div class="section_wrapper">
           <div class="col_left_top">
             <div class="image">
-              <img src="billeder/responsive_portfolio.png" />
+              <img
+                src="billeder/responsive_portfolio.png"
+                alt="billede af mit responsive website"
+              />
             </div>
             <div class="text">
               <h2>02 WEB</h2>
@@ -56,10 +61,12 @@
                 designprocesser, hvilket gjorde det muligt for mig at lave et
                 responsivt site. Se hvordan det blev her.
               </p>
-              <div class="knap">
-                <button>
-                  <a href="web.html">SE TEMA</a>
-                </button>
+              <div class="portfolio_knap">
+                <div class="knap">
+                  <div class="button">
+                    <a href="web.html">SE TEMA</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -70,7 +77,10 @@
         <div class="section_wrapper">
           <div class="col_right">
             <div class="image">
-              <img src="billeder/ux_portfolio.png" />
+              <img
+                src="billeder/ux_portfolio.png"
+                alt="billede af min færdige prototype"
+              />
             </div>
             <div class="text">
               <h2>03 UX</h2>
@@ -81,10 +91,12 @@
                 hvordan min prototype blev efter flere tests og undersøgelser
                 her.
               </p>
-              <div class="knap">
-                <button>
-                  <a href="ux.html">SE TEMA</a>
-                </button>
+              <div class="portfolio_knap">
+                <div class="knap">
+                  <div class="button">
+                    <a href="ux.html">SE TEMA</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -95,7 +107,10 @@
         <div class="section_wrapper">
           <div class="col_left">
             <div class="image">
-              <img src="billeder/spil_portfolio.png" />
+              <img
+                src="billeder/spil_portfolio.png"
+                alt="billede af mit spil"
+              />
             </div>
             <div class="text">
               <h2>04 ANIMATION</h2>
@@ -105,10 +120,12 @@
                 til javacript gennem udviklingen af et simpelt spil_test. Se
                 hvordan jeg fik det til at blive til et spil her.
               </p>
-              <div class="knap">
-                <button>
-                  <a href="animation.html">SE TEMA</a>
-                </button>
+              <div class="portfolio_knap">
+                <div class="knap">
+                  <div class="button">
+                    <a href="animation.html">SE TEMA</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -119,7 +136,10 @@
         <div class="section_wrapper">
           <div class="col_right_bottom">
             <div class="image">
-              <img src="billeder/pilot_portfolio.png" />
+              <img
+                src="billeder/pilot_portfolio.png"
+                alt="billede af content temaet"
+              />
             </div>
             <div class="text">
               <h2>05 CONTENT</h2>
@@ -129,10 +149,12 @@
                 af DSLR kamera, implementere video til hjemmeside og meget mere.
                 Se de færdige resultater her.
               </p>
-              <div class="knap">
-                <button>
-                  <a href="content.html">SE TEMA</a>
-                </button>
+              <div class="portfolio_knap">
+                <div class="knap">
+                  <div class="button">
+                    <a href="content.html">SE TEMA</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
