--- a/ux.html
+++ b/ux.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="LOGO v1.svg" />
+    <link rel="icon" href="LOGO_v1.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ux</title>
@@ -18,7 +18,9 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="billeder/LOGO v1.png" /></a>
+        <a href="index.html"
+          ><img src="billeder/LOGO_v1.png" alt="billede af logo"
+        /></a>
       </div>
       <nav id="nav_baggrund">
         <div id="menuknap">☰</div>
@@ -62,25 +64,29 @@
 
         <div class="tema_grid">
           <div class="temabillede">
-            <img src="billeder/ux_portfolio.png" />
+            <img
+              src="billeder/ux_portfolio.png"
+              alt="billede af min prototype"
+            />
           </div>
           <div class="opgave_info">
             <h2>03.02.02</h2>
             <h3>XD PROTOTYPE</h3>
-            <button>
+
+            <div class="button">
               <a
                 href="https://xd.adobe.com/view/34c4c29e-1f5b-4f42-8f38-92ab463a18df-6197/"
                 target="_blank"
                 >SE PROTOTYPE</a
               >
-            </button>
-            <button>
+            </div>
+            <div class="button">
               <a
                 href="https://ceciliejasmin.dk/kea/03_ux/dokumentation.pdf"
                 target="_blank"
                 >DOKUMENTATION</a
               >
-            </button>
+            </div>
           </div>
         </div>
 
